--- a/public/master.css
+++ b/public/master.css
@@ -112,8 +112,16 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	color: black;
 	background: white;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font:13px/1.231 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	/* for IE6/7 */ 
+	*font-size:small; 
+	/* for IE Quirks Mode */
+	*font:x-small;
+	font-size: medium;
+	-webkit-font-smoothing:antialiased;
+	-webkit-text-size-adjust:none;
 }
 
 	body #page {
@@ -186,19 +194,70 @@ body {
 				}
 
 				.addresses dd.inset {
-					margin-left: 37.5%;
+					margin-left: 38%;
 				}
 
+	a:link,
+	a:visited {
+		color: black;
+	}
+
+	a:hover,
+	a:active {
+		color: black;
+	}
+
+	.social {
+		display: block;
+		clear: both;
+		text-align: center;
+		margin-bottom: 30px;
+	}
+
+		.social ul {
+			display: inline-block;
+			margin: 0 auto;
+			padding: 0;
+		}
+
+			.social ul li {
+				display: inline-block;
+				margin: 0 10px;
+				padding: 0;
+				list-style: none;
+			}
+
+				.social a {
+					display: inline-block;
+				}
+
+					.social img {
+						display: inline-block;
+						border-width: 0;
+						width: 64px;
+						height: 64px;
+					}
 
 
-@media (max-width: 479px) {
+
+@media screen and (max-width: 479px) {
+	body {
+		font-size: 11px;
+	}
+	.brand {
+		width: 50%;
+		margin: 20px auto;
+	}
 	.addresses {
 		float: none;
 		width: auto;
 	}
+	.addresses dl {
+		margin-bottom: 8px;
+	}
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 767px) {
 	#page {
 		width: auto;
 	}
